Improved tracing